--- a/src/index.html
+++ b/src/index.html
@@ -15,4 +15,13 @@
       <p>&copy; 2017 ivpadim<p>
   </div>
 </body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110950862-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110950862-1');
+</script>
 </html>
